test/libhyperion/syntaxTests/denominations/invalid_denomination_on_bool.hyp
contract C {
	bool constant x = true quanta;
}
// ----
// ParserError 2314: (37-43): Expected ';' but got 'quanta'
